@@ -81,12 +81,24 @@ gnome-settings-daemon/modmap-dialog.glade
 gnome-settings-daemon/reaper.c
 libbackground/applier.c
 libbackground/preferences.c
+libgswitchit/gnome-kbd-indicator-test.c
+libgswitchit/gswitchit-config.c
+libgswitchit/gswitchit-plugins-add.c
+libgswitchit/gswitchit-plugins-app.c
+libgswitchit/gswitchit-plugins.desktop.in.in
+libgswitchit/gswitchit-plugins.glade
+libslab/app-shell.c
+libslab/application-tile.c
+libslab/document-tile.c
+libslab/search-bar.c
 libsounds/sound-view.c
 libwindow-settings/gnome-wm-manager.c
 libwindow-settings/metacity-window-manager.c
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
 schemas/apps_gnome_settings_daemon_keybindings.schemas.in
 schemas/apps_gnome_settings_daemon_screensaver.schemas.in
+shell/control-center.c
+shell/gnomecc.desktop.in.in
 typing-break/drw-break-window.c
 typing-break/drwright.c
 typing-break/main.c
