@@ -38,5 +38,4 @@ root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
 root-manager/root-manager.c
 control-center/gnomecc-event-box.c
-control-center/GNOME_ControlCenter.server.in
 schemas/desktop_gnome_font_rendering.schemas.in
